# tardigrade_ws

./: .gitignore  .gitmodules  README.md  requirements.txt
src/simulator/: CMakeLists.txt  package.xml
src/simulator/launch/: robosub.launch
src/simulator/models/gate/: gate_casino.sdf  model.config
src/simulator/models/gate/materials/scripts/: dice.material
src/simulator/scripts/: read_cameras.py
src/simulator/worlds/: transdec.world
src/tardigrade/: CMakeLists.txt  package.xml  setup.py
src/tardigrade/controls/: orientation_control.py  velocity_transformer.py
src/tardigrade/controls/controllers/: PIDRegulator.py
src/tardigrade/launch/: gate_approach.launch.py  spawn_tardigrade.launch.py
src/tardigrade/msg/: SubThrusts.msg
src/tardigrade/robots/: tardigrade_default.xacro
src/tardigrade/scripts/: spawn_model
src/tardigrade/tasks/: gate_approach.py
src/tardigrade/urdf/: common.urdf.xacro  tardigrade.gazebo.xacro  tardigrade_actuators.xacro  tardigrade_base.urdf.xacro  tardigrade_base.xacro
src/tardigrade/vision/: gate_approach.py
