<?xml version="1.0"?>
<package format="3">
  <name>tardigrade</name>
  <version>0.1.0</version>
  <description>Controls, URDF, and messages for the Tardigrade AUV</description>
  <maintainer email="kabilanvaikunthan@berkeley.edu">kabilan</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>